--- a/resources/views/index.handlebars
+++ b/resources/views/index.handlebars
@@ -1,11 +1,33 @@
-<html>
-<head></head>
+<!DOCTYPE html>
+<html lang=zh-CN>
+<head>
+    <meta charset=utf-8>
+    <meta http-equiv=X-UA-Compatible content="IE=edge">
+    <title></title>
+    <script src=http://res.wx.qq.com/open/js/jweixin-1.6.0.js></script>
+    <script>document.addEventListener('DOMContentLoaded', function () {
+        document.documentElement.style.fontSize = document.documentElement.clientWidth / 20 + 'px'
+    })
+    var coverSupport = 'CSS' in window && typeof CSS.supports === 'function' && (CSS.supports('top: env(a)') || CSS.supports('top: constant(a)'))
+    document.write('<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0' + (coverSupport ? ', viewport-fit=cover' : '') + '" />')</script>
+    <link rel=stylesheet href=http://192.168.187.1:8889/static/index.5ca1c9cc.css>
+</head>
 <body>
-<div class="wrap">
-    <h1>Hello:{{ip}}</h1>
-    <h1>Now :{{time}}</h1>
-</div>
-<script type="text/javascript">
+<noscript><strong>Please enable JavaScript to continue.</strong></noscript>
+<div id=app></div>
+
+<script>
+    window.userInfo = {
+        jws_token: '{{userToken}}',
+        nickname: '{{nickname}}',
+        avatar: '{{avatar}}',
+        sex: '{{sex}}',
+        roles: '{{roles}}',
+        id: '{{id}}',
+    }
 </script>
+
+<script src=http://192.168.187.1:8889/static/js/chunk-vendors.js></script>
+<script src=http://192.168.187.1:8889/static/js/index.js></script>
 </body>
 </html>
