修改view index入口静态资源读取方式，修改openid获取失败的bug

--- a/resources/views/index.handlebars
+++ b/resources/views/index.handlebars
@@ -4,29 +4,29 @@
     <meta charset=utf-8>
     <meta http-equiv=X-UA-Compatible content="IE=edge">
     <title></title>
-    <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+<!--    <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>-->
     <script>document.addEventListener('DOMContentLoaded', function () {
         document.documentElement.style.fontSize = document.documentElement.clientWidth / 20 + 'px'
     })
     var coverSupport = 'CSS' in window && typeof CSS.supports === 'function' && (CSS.supports('top: env(a)') || CSS.supports('top: constant(a)'))
     document.write('<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0' + (coverSupport ? ', viewport-fit=cover' : '') + '" />')</script>
-    <link rel=stylesheet href=http://192.168.187.1:8889/static/index.5ca1c9cc.css>
+    <link rel=stylesheet href={{assetHost}}/static/index.5ca1c9cc.css>
 </head>
 <body>
 <noscript><strong>Please enable JavaScript to continue.</strong></noscript>
 <div id=app></div>
 
 <script>
-    window.userInfo = {
-        jws_token: '{{userToken}}',
-        nickname: '{{nickname}}',
-        avatar: '{{avatar}}',
-        sex: '{{sex}}',
-        roles: '{{roles}}',
-        id: '{{id}}',
-    }
         {{#equal clientType "wx_official"}}
-        var config = {
+        window.userInfo = {
+            jws_token: '{{user.userToken}}',
+            nickname: '{{user.nickname}}',
+            avatar: '{{user.avatar}}',
+            sex: '{{user.sex}}',
+            roles: '{{user.roles}}',
+            id: '{{user.id}}',
+        }
+        var wx_config = {
             debug: false, // 开启调试模式,调用的所有api的返回值会在客户端alert出来，若要查看传入的参数，可以在pc端打开，参数信息会通过log打出，仅在pc端时才会打印。
             appId: '{{wxCfg.appID}}', // 必填，公众号的唯一标识
             timestamp: {{wxCfg.timestamp}}, // 必填，生成签名的时间戳
@@ -71,12 +71,13 @@
                 'openCard'
             ] // 必填，需要使用的JS接口列表
         }
-        wx.config(config);
+        //wx.config(config);
+        window.wx_config = wx_config
         {{/equal}}
 
 </script>
 
-<script src=http://192.168.187.1:8889/static/js/chunk-vendors.js></script>
-<script src=http://192.168.187.1:8889/static/js/index.js></script>
+<script src={{assetHost}}/static/js/chunk-vendors.js></script>
+<script src={{assetHost}}/static/js/index.js></script>
 </body>
 </html>
