完善收获地址逻辑

--- a/resources/views/index.handlebars
+++ b/resources/views/index.handlebars
@@ -29,7 +29,7 @@
             id: '{{user.id}}',
         }
         var wx_config = {
-            debug: true,
+            debug: false,
             appId: '{{wxCfg.appID}}', // 必填，公众号的唯一标识
             timestamp: '{{wxCfg.timestamp}}', // 必填，生成签名的时间戳
             nonceStr: '{{wxCfg.nonceStr}}', // 必填，生成签名的随机串
