修复预下单和查询订单的逻辑，修复分享不生效问题

--- a/resources/views/index.handlebars
+++ b/resources/views/index.handlebars
@@ -28,6 +28,7 @@
             roles: '{{user.roles}}',
             id: '{{user.id}}',
         }
+        /*
         var wx_config = {
             debug: false,
             appId: '{{wxCfg.appID}}', // 必填，公众号的唯一标识
@@ -53,9 +54,9 @@
             openTagList: [
                 'wx-open-launch-weapp'
             ]
-        }
+        }*/
         //wx.config(config);
-        window.wx_config = wx_config
+        //window.wx_config = wx_config
         //console.log('set wx_config',wx_config)
         {{/equal}}
 </script>
