添加办理会员功能

--- a/resources/views/index.handlebars
+++ b/resources/views/index.handlebars
@@ -27,6 +27,7 @@
             sex: '{{user.sex}}',
             roles: '{{user.roles}}',
             id: '{{user.id}}',
+            vip_level: {{user.vip_level}},
         }
         {{/equal}}
 </script>
