--- a/resources/views/callback.handlebars
+++ b/resources/views/callback.handlebars
@@ -7,9 +7,10 @@
 <noscript><strong>Please enable JavaScript to continue.</strong></noscript>
 <div id=app></div>
 <script>
-    var url = window.location.href.replace(window.location.search, '')
-    url = url.replace('/wxAuthCallBack', '')
-    window.location.replace(url)
+    var url = window.location.href
+    window.localStorage.setItem("wx_auth_before_return_url", url)
+    // handlebar 转义问题
+    window.location.href = "{{{auth_url}}}"
 </script>
 </body>
 </html>
