--- a/resources/views/callback.handlebars
+++ b/resources/views/callback.handlebars
@@ -8,12 +8,21 @@
 <div id=app></div>
 <script>
     var url = window.location.href
+    //alert("callback "+url)
     window.localStorage.setItem("wx_auth_before_return_url", url)
     // handlebar 转义问题
     var authUrl =  "{{{auth_url}}}"
+    //alert("authUrl " + authUrl)
+    function setCookie(name,value,iDay){
+        var oDate=new Date();
+        oDate.setDate(oDate.getDate()+iDay);    //iDay是几天过期
+        document.cookie=name+'='+value+';expires='+oDate;
+    }
+    setCookie("token", '', 1)
+
     setTimeout(function (){
         window.location.href = authUrl
-    }, 1000)
+    }, 3000)
 </script>
 </body>
 </html>
