--- a/resources/views/index.handlebars
+++ b/resources/views/index.handlebars
@@ -29,7 +29,7 @@
         window.localStorage.setItem("wx_auth_before_return_url","")
         //setCookie("token", '{{user.userToken}}', 1)
         //console.log(document.cookie)
-        alert('returnUrl ' + returnUrl )
+        //alert('returnUrl ' + returnUrl )
         window.location.href = returnUrl
     }
 
