--- a/resources/views/index.handlebars
+++ b/resources/views/index.handlebars
@@ -18,11 +18,31 @@
 <body>
 
 <script>
-    function setCookie(name,value,iDay){
-        var oDate=new Date();
-        oDate.setDate(oDate.getDate()+iDay);    //iDay是几天过期
-        document.cookie=name+'='+value+';expires='+oDate;
+    function getCookie (name) {
+        var arr, reg = new RegExp("(^| )" + name + "=([^;]*)(;|$)")
+        if (arr = document.cookie.match(reg)) {
+            return unescape(arr[2])
+        } else {
+            return null
+        }
     }
+
+    // 设置cookie
+    function setCookie (c_name, value, days) {
+        var exp = new Date()
+        exp.setTime(exp.getTime() + days*24*60*60*1000);
+        document.cookie = c_name + "=" + escape(value) + ";expires=" + exp.toGMTString()
+    }
+
+    // 删除cookie
+    function delCookie (name) {
+        var exp = new Date()
+        exp.setTime(exp.getTime() - 1)
+        var cval = getCookie(name)
+        if (cval != null)
+            document.cookie = name + "=" + cval + ";expires=" + exp.toGMTString()
+    }
+
     var returnUrl = window.localStorage.getItem("wx_auth_before_return_url")
     //console.log('returnUrl', returnUrl)
     if(returnUrl!= ""){
